    - Stop allowing hibernating servers to be "stable" or "fast".

  o Minor bugfixes (controller), reported by daejees:
    - Make 'getinfo fingerprint' return a 551 error if we're not a
      server, so we match what the control spec claims we do.
    - Fix a typo in an error message when extendcircuit fails that
      caused us to not follow the \r\n-based delimiter protocol.
    - Make the response to 'getinfo addr-mappings/*' follow the spec.


Changes in version 0.1.2.10-rc - 2007-03-07
  o Major bugfixes (Windows):
    - Do not load the NT services library functions (which may not exist)
      just to detect if we're a service trying to shut down. Now we run
      on Win98 and friends again.

  o Minor bugfixes (other):
    - Clarify a couple of log messages.
    - Fix a misleading socks5 error number.


Changes in version 0.1.2.9-rc - 2007-03-02
  o Major bugfixes (Windows):
    - On MinGW, use "%I64u" to printf/scanf 64-bit integers, instead
      of the usual GCC "%llu". This prevents a bug when saving 64-bit
      int configuration values: the high-order 32 bits would get
      truncated. In particular, we were being bitten by the default
      MaxAdvertisedBandwidth of 128 TB turning into 0. (Fixes bug 400
      and maybe also bug 397.)

  o Minor bugfixes (performance):
    - Use OpenSSL's AES implementation on platforms where it's faster.
      This could save us as much as 10% CPU usage.

  o Minor bugfixes (server):
    - Do not rotate onion key immediately after setting it for the first
      time.

  o Minor bugfixes (directory authorities):
    - Stop calling servers that have been hibernating for a long time
      "stable". Also, stop letting hibernating or obsolete servers affect
      uptime and bandwidth cutoffs.
    - Stop listing hibernating servers in the v1 directory.

  o Minor bugfixes (hidden services):
    - Upload hidden service descriptors slightly less often, to reduce
      load on authorities.

  o Minor bugfixes (other):